# incident-copilot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
data/: README.md
data/incidents/: checkout-service-dns-misconfiguration.json  example.json  inventory-service-cache-regression.json  payment-service-pool-exhaustion.json
deploy/: otel-collector-config.yaml  prometheus.yml
docs/: ARCHITECTURE.md  DATA_MODEL.md  DEMO_GUIDE.md  EVALUATION.md  GRAPH_CURRENT.md  GRAPH_DESIGN.md  INTERVIEW_GUIDE.md  PRD.md  PROGRESS.md  ROADMAP.md
docs/learning/: 01-project-introduction.md  03-request-lifecycle.md  04-state-and-reducers.md  05-graph-and-nodes.md  06-providers-and-tools.md  07-rag-pipeline.md  08-investigation-loop-and-hypotheses.md  11-evaluation-and-tests.md  12-local-run-and-demo.md  13-faq-and-interview.md  14-glossary.md  INCIDENT_COPILOT_LEARNING_GUIDE.md  INCIDENT_COPILOT_SOURCE_CODE_GUIDE.md  README.md  core-reading-index.md  source-reading-foundations.md
scripts/: __init__.py  build_learning_guide.py  check_chinese_comments.py  emit_demo_metrics.py  ingest_knowledge.py  render_graph.py  run_api_demo.py  run_investigation.py  run_observability_demo.py  search_knowledge.py
src/incident_copilot/: __init__.py  demo.py  main.py  server.py
tests/integration/: test_api.py  test_fixture_tools.py  test_graph_mermaid.py  test_human_review_graph.py  test_investigation_api_phase5.py  test_investigation_graph.py  test_investigation_service.py  test_offline_evaluation.py  test_rag_pipeline.py  (+1 more)
(+118 files in other folders)
