[build-system]
requires = ["hatchling>=1.31,<2"]
build-backend = "hatchling.build"

[project]
name = "incident-copilot"
version = "0.1.0"
description = "Evidence-driven incident diagnosis workflow built for local, reproducible demos."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "IncidentCopilot contributors" }]
dependencies = [
    "fastapi>=0.139,<0.140",
    "langgraph>=1.2,<1.3",
    "pydantic>=2.13,<2.14",
    "pydantic-settings>=2.14,<2.15",
    "uvicorn[standard]>=0.51,<0.52",
]

[project.optional-dependencies]
postgres = [
    "langgraph-checkpoint-postgres>=3.1,<4",
    "psycopg[binary]>=3.3,<4",
]

[dependency-groups]
dev = [
    "httpx2>=2.7,<2.8",
    "mypy>=2.3,<2.4",
    "pytest>=9.1,<9.2",
    "pytest-asyncio>=1.4,<1.5",
    "ruff>=0.15.20,<0.16",
]

[tool.hatch.build.targets.wheel]
packages = ["src/incident_copilot"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["incident_copilot"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
mypy_path = ["src"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --basetemp=.pytest-tmp"
testpaths = ["tests"]
asyncio_mode = "strict"
